fixed sectors grid alignment and updated index file

--- a/scss/v2/sectors.scss
+++ b/scss/v2/sectors.scss
@@ -516,7 +516,6 @@
       @include grid-collapse;
     }
     padding-bottom: 172px;
-    margin: 0 auto;
   }
 
   .role_z,
